PML_project/sr1/gpsrUQ/slurm-4374015.out
  File "smingo_script.py", line 49
    individual = 
                ^
SyntaxError: invalid syntax
